[package]
name = "pluggable_consensus_blockchain"
version = "0.1.0"
authors = "[Ronny Ardiansyah <ronnyardiansya@gmail.com]"
edition = "2025"
description = "A modular blockchain with pluggable consensus mechanisms (PoW,PoA)"
license = "MIT"



[dependencies]
sha2="0.10.9"
serde = {version="1.0.219", features = ["derive"]}
chrono = "0.4.41"
serde_json = "1.0.140"
hex = "0.4.3"
aes = "0.8.4"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
ed25519-dalek = "2.1.1"
generic-array = "1.2.0"
rand = "0.9.1"